==> GigaDeviceSemiconductor/GD32VW55x_WiFi_BLE_SDK/MSDK/examples/ble/mesh/provisioner/app_mesh.c <==
#include "app_cfg.h"
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "mesh_cfg.h"
#include "api/mesh.h"
#include "app_mesh.h"
#include "bluetooth/bt_str.h"
#include "wrapper_os.h"
#include "mesh_kernel.h"
#include "dbg_print.h"
#include "app_mesh_cfg.h"
#include "app_mesh_rpr.h"
#include "api/settings.h"
#include "nvds_flash.h"
#define MOD_LF 0x0000
#define MOD_LF_CLI 0x0001
#define BT_COMP_ID_LF           0x05f1 /**< The Linux Foundation */
#define OP_VENDOR_BUTTON_PRESSED    BT_MESH_MODEL_OP_3(0x00, BT_COMP_ID_LF)
#define OP_VENDOR_BUTTON_RELEASED   BT_MESH_MODEL_OP_3(0x01, BT_COMP_ID_LF)
#define OP_VENDOR_BUTTON_STATUS     BT_MESH_MODEL_OP_3(0x02, BT_COMP_ID_LF)

void app_mesh_init(void)
{
    int err;
    uint8_t dev_uuid[16] = {0};
    uint32_t uuid_len = 16;

    extern void ble_mesh_cli_init(void);
    ble_mesh_cli_init();

    mesh_kernel_init();

    k_sem_init(&sem_prov_cap_cmd, 0, 1);

    err = nvds_data_get(NULL, MESH_NAME_SPACE, "DEV_UUID", dev_uuid, (uint32_t *)&uuid_len);

    if (err == NVDS_OK) {
        app_print("Get device uuid from storage %s\r\n", bt_hex(dev_uuid, uuid_len));
        sys_memcpy(dev_default_uuid, dev_uuid, uuid_len);
    } else {
        sys_random_bytes_get(dev_default_uuid, uuid_len);
        app_print("First init mesh, get random device uuid %s\r\n", bt_hex(dev_default_uuid, uuid_len));
#if (CONFIG_BT_SETTINGS)
        settings_save_one("DEV_UUID", dev_default_uuid, uuid_len);
#endif
    }

    err = bt_mesh_init(&prov, &comp);

    if (err) {
        app_print("mesh init fail, err:%d\r\n", err);
        return;
    }

#if defined(CONFIG_BT_MESH_COMP_PAGE_2)
    bt_mesh_comp2_register(&comp_p2);
#endif

#if (CONFIG_MESH_CB_REGISTERED)
    bt_mesh_hearbeat_cb_register(&heartbeat_cb);
#endif

    err = bt_mesh_cdb_create(app_mesh_default_net_key);
    if (err) {
        app_print("cdb create net key err %d", err);
    }
    else {
        err = bt_mesh_provision(app_mesh_default_net_key, 0, 0, 0, 1,
                                app_mesh_default_dev_key);
        if (err) {
            app_print("provision local fail, err:%d\r\n", err);
        }
    }

    app_print("mesh init success, uuid: %s\r\n", bt_hex(prov.uuid, 16));
}
