==> GigaDeviceSemiconductor/GD32VW55x_WiFi_BLE_SDK/MSDK/examples/ble/mesh/light_demo/app_mesh.c <==
#include "app_cfg.h"
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "gd32vw55x.h"
#include "mesh_cfg.h"
#include "api/mesh.h"
#include "app_mesh.h"
#include "bluetooth/bt_str.h"
#include "wrapper_os.h"
#include "mesh_kernel.h"
#include "dbg_print.h"
#include "app_mesh_cfg.h"
#include "api/settings.h"
#include "nvds_flash.h"
#include "transition.h"
#include "models.h"
#include "model_utils.h"
#include "generic_server.h"
#define BT_COMP_ID_LF           0x05f1 /**< The Linux Foundation */
#define LIGHT_GPIO                      GPIOB
#define LIGHT_R_PIN                     GPIO_PIN_11
#define LIGHT_G_PIN                     GPIO_PIN_12
#define LIGHT_B_PIN                     GPIO_PIN_13

void app_mesh_init(void)
{
    int err;
    uint8_t dev_uuid[16] = {0};
    uint32_t uuid_len = 16;

    extern void ble_mesh_cli_init(void);
    ble_mesh_cli_init();

    mesh_kernel_init();

    err = nvds_data_get(NULL, MESH_NAME_SPACE, "DEV_UUID", dev_uuid, (uint32_t *)&uuid_len);

    if (err == NVDS_OK) {
        app_print("Get device uuid from storage %s\r\n", bt_hex(dev_uuid, uuid_len));
        sys_memcpy(dev_default_uuid, dev_uuid, uuid_len);
    } else {
        sys_random_bytes_get(dev_default_uuid, uuid_len);
        app_print("First init mesh, get random device uuid %s\r\n", bt_hex(dev_default_uuid, uuid_len));
#if (CONFIG_BT_SETTINGS)
        settings_save_one("DEV_UUID", dev_default_uuid, uuid_len);
#endif
    }

    err = bt_mesh_init(&prov, &comp);

    if (err) {
        app_print("mesh init fail, err:%d\r\n", err);
        return;
    }

#if defined(CONFIG_BT_MESH_COMP_PAGE_2)
    bt_mesh_comp2_register(&comp_p2);
#endif

#if (CONFIG_MESH_CB_REGISTERED)
    bt_mesh_hearbeat_cb_register(&heartbeat_cb);
#endif

    rcu_periph_clock_enable(RCU_GPIOB);
    gpio_mode_set(LIGHT_GPIO, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, LIGHT_R_PIN);
    gpio_output_options_set(LIGHT_GPIO, GPIO_OTYPE_PP, GPIO_OSPEED_25MHZ, LIGHT_R_PIN);
    gpio_mode_set(LIGHT_GPIO, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, LIGHT_G_PIN);
    gpio_output_options_set(LIGHT_GPIO, GPIO_OTYPE_PP, GPIO_OSPEED_25MHZ, LIGHT_G_PIN);
    gpio_mode_set(LIGHT_GPIO, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, LIGHT_B_PIN);
    gpio_output_options_set(LIGHT_GPIO, GPIO_OTYPE_PP, GPIO_OSPEED_25MHZ, LIGHT_B_PIN);

    if (!bt_mesh_is_provisioned()) {
        app_print("device is not provisioned\r\n");
        err = bt_mesh_prov_enable(BT_MESH_PROV_GATT);
        if (err) {
            app_print("Failed to enable unporvision beacon (err %d)", err);
        }
        light_control(LIGHT_R_PIN);
    }

    app_print("mesh init success, uuid: %s\r\n", bt_hex(prov.uuid, 16));
}
